public/v/release-3.1/_sources/releases/index.rst.txt
=============
Release Notes
=============

Isaac ROS 3.1 September 26, 2024
--------------------------------

Packages available as `3.1 Release` tagged `v3.1` on GitHub.

What's New
~~~~~~~~~~

Updates including:

- restored ZED support
- tested with Isaac Sim 4.1

Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds available in the troubleshooting section:

- Isaac Sim 4.2 not yet supported
- Isaac Perceptor workflows only support Isaac Sim 4.0



Isaac ROS 3.0.1 June 14, 2024
-----------------------------

Packages available as `3.0.1 Release` tagged `v3.0.1` on GitHub.

What's New
~~~~~~~~~~

Updates including:

- tested with Isaac Sim 4.0
- Isaac Sim NITROS Bridge support
- Improved Isaac Perceptor low-lying obstacle detection through new camera/ground calibration for Nova Developer Kit

Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds available in the troubleshooting section:

- Latest RealSense firmware (5.16.0.1) and ``librealsense`` (2.55.1) introduced breaking changes. Reverted to building supported versions from source.



Isaac ROS 3.0.0 May 30, 2024
----------------------------

Packages available as `3.0.0 Release` tagged `v3.0.0` on GitHub.

What's New
~~~~~~~~~~

Updates including:

- support for JetPack 6.0 / Ubuntu 22.04 on CUDA 12.2 (only)
- tested with Isaac Sim 2023.1.1
- Introducing Isaac Manipulator reference workflows for perception-driven manipulation
- Introducing Isaac Perceptor reference workflows for visual odometry and obstacle perception
- Improved documentation with tabbed quickstarts for source/binary and image providers
- ``isaac_ros_benchmark`` added multi-cam benchmarks
- ``isaac_ros_common`` improvements to run_dev.sh, added Docker deployment scripts
- ``isaac_ros_cumotion`` new cuMotion package and ``MoveIt!`` plugin
- ``isaac_ros_dnn_inference`` decomposed DNN image encoder nodes
- ``isaac_ros_ess`` updated for ESS 4.0 improved for workcell manipulation use cases
- ``isaac_ros_foundationpose`` added NITROS FoundationPose decoder
- ``isaac_ros_image_proc`` added crop/resize nodes
- ``isaac_ros_jetson_stats`` added ``jtop`` package
- ``isaac_ros_mission_client`` new Nav2 docking support
- ``isaac_ros_nitros`` added ``message_filter`` support for CUDA with NITROS
- ``isaac_ros_nova`` new data recorder/replayer, rosbag validation tools
- ``isaac_ros_nitros_bridge`` added support for Jetson
- ``isaac_ros_nvblox`` new multi-cam scene reconstruction, added NITROS support, Foxglove viz plugin
- ``isaac_ros_rtdetr`` added NITROS RT-DETR support for SyntheticaDETR models
- ``isaac_ros_segformer`` added NITROS Segformer decoder
- ``isaac_ros_segment_anything`` added NITROS Segment Anything (SAM) decoder
- ``isaac_ros_visual_slam`` new multi-cam visual odometry, added NITROS support


Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds available in the troubleshooting section:

- Known stability issues and frame drops under high CPU load in multi-cam configurations
- Known disconnect issues with Nova Carter WiFi + Bluetooth when switching access points during teleoperation
- Known high latency issue of Isaac ROS FoundationPose pipeline with Hawk cameras
- Removed support for JetPack 5.1.2, Ubuntu 20.04, and Jetson Xavier
- Removed support for Stereolabs ZED cameras until ZED SDK support for JP6 is available
- ROS 1 Noetic not supported on Ubuntu 22.04 for use with Isaac ROS NITROS Bridge
- Known issue with setting ``use_intra_process_comms`` explicitly to ``True`` in ROS graphs with NITROS nodes. See workaround :ref:`here <troubleshooting/dev_env:Failed to load a NITROS enabled nodes with intraprocess communication enabled>`.

Feature Requests & Issues Addressed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release contains new features and fixes to address user feedback, including:

- `isaac_ros_visual_slam #141 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_visual_slam/issues/141>`__: Removes TF static publisher preventing intra-process communication



Isaac ROS 2.1.0 November 16, 2023
---------------------------------

Packages available as `2.1.0 Release` tagged `v2.1.0` on GitHub.

What's New
~~~~~~~~~~

Updates including:

- Streamlined developer experience with prebuilt Debian packages for Isaac ROS on x86 and Jetson platforms
- ``ros2_benchmark`` added live mode benchmarking capability
- ``isaac_ros_managed_nitros_examples`` added CV-CUDA DNN Image Encoder example
- ``isaac_ros_unet`` improved segmentation accuracy by converting to BGR colorspace

Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds available in the troubleshooting section:

- CV-CUDA DNN Image Encoder example is limited to x86 platforms with discrete GPU
- Isaac ROS Nvblox prebuilt Debian packages not yet available

Feature Requests & Issues Addressed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release contains new features and fixes to address user feedback, including:

- `gxf #2 <https://github.com/NVIDIA-ISAAC-ROS/gxf/issues/2>`__: Added additional files

Isaac ROS 2.0.0 October 18, 2023
--------------------------------

Packages available as `2.0.0 Release` tagged `v2.0.0` on GitHub.

What's New
~~~~~~~~~~

Updates including:

- support for JetPack 5.1.2
- support for Isaac Sim 2023.1.0
- support for Nova Carter
- support for Stereolabs ZED cameras
- ``isaac_ros_apriltag`` improved throughput performance, exposed new tuning parameters
- ``isaac_ros_centerpose`` adding NITROS CenterPose decoder
- ``isaac_ros_ess`` updated for ESS 3.0 with confidence thresholding in multiple resolutions
- ``isaac_ros_h264_decoder`` added support on ``aarch64``
- ``isaac_ros_h264_encoder`` added support on x86_64
- ``isaac_ros_managed_nitros`` introducing CUDA with NITROS
- ``isaac_ros_mission_client`` added mission cancellation and improved stability
- ``isaac_ros_nitros_bridge`` introducing support for ROS 1 Noetic
- ``isaac_ros_nova`` new support packages for Nova sensor suite
- ``isaac_ros_nvblox`` new general dynamics detection, improved stability and performance
- ``isaac_ros_stereo_image_proc`` added confidence thresholding for SGM
- ``isaac_ros_yolov8`` adding NITROS YOLOv8 decoder
- ``isaac_ros_visual_slam`` improved stability
- Improved developer experience with unified documentation site
- Streamlined development workflow with ROS 2 Humble Debian packages for JetPack 5
- Renamed Isaac ROS DNN Stereo Disparity -> Isaac ROS DNN Stereo Depth
- Renamed Isaac ROS Proximity Segmentation -> Isaac ROS Depth Segmentation
- Deleted Isaac ROS IMU, moved ``isaac_ros_imu_bmi088`` to Isaac ROS Nova

Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds available in the troubleshooting section:

- Isaac ROS NITROS Bridge is limited to x86 platforms with discrete GPU
- People in Isaac 2023.1.0 may not animate in Isaac ROS Nvblox examples
- ``isaac_ros_triton`` can under certain conditions report errors of the form ``Incomplete inference; response appeared out of order``.
- Inconsistencies and failures on multi-GPU systems
- Instability when running >2 stereo cameras through Isaac ROS Argus Camera

Feature Requests & Issues Addressed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release contains new features and fixes to address user feedback, including:

- `isaac_ros_argus_camera #21 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_argus_camera/issues/21>`__: Update camera distortion type mapping
- `isaac_ros_common #62 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_common/issues/62>`__: Fixed handling of CONFIG_DOCKER_SEARCH_DIRS
- `isaac_ros_common #63 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_common/issues/63>`__: Reduced required ``cmake`` to 3.22.1 available with Ubuntu 22.04
- `isaac_ros_map_localization #6 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_map_localization/issues/6>`__: Update support for resolution parameter

Isaac ROS 0.31.0 DP (developer preview) May 25, 2023
----------------------------------------------------

Packages available as ``DP 3.1 Release`` tagged ``v0.31.0-dp`` on
`GitHub <https://github.com/NVIDIA-ISAAC-ROS/.github/releases/tag/v0.31.0-dp>`__.

What's New
~~~~~~~~~~

Updates including:

-  ``isaac_ros_visual_slam`` updated with cuVSLAM 11 for improved
   performance, on-robot validation guide, and better HAWK support
-  optimizations for CPU overhead for all NITROS packages
-  ``isaac_ros_stereo_image_proc`` stereo rectification improved
-  new package ``isaac_ros_imu_bmi088`` for interfacing with Bosch
   BMI088 IMU

Isaac ROS 0.30.0 DP (developer preview) April 5, 2023
-----------------------------------------------------

Packages available as ``DP 3 Release`` tagged ``v0.30.0-dp`` on
`GitHub <https://github.com/NVIDIA-ISAAC-ROS/.github/releases/tag/v0.30.0-dp>`__.


What's New
~~~~~~~~~~

Updates including:

-  support for JetPack 5.1.1
-  support for Jetson Orin NX, and Jetson Orin Nano 8GB
-  support for RTX 4K series (Lovelace GPU) with CUDA 11.8 on x86_64
-  new package ``isaac_ros_map_localization`` using LIDAR to
   automatically find the pose of the robot for Nav2
-  ``isaac_ros_vslam`` improvements for better covariance estimation and
   planar constraints for mobile robots
-  ``isaac_ros_nvblox`` improvements for DNN-based person detection and
   removal from 3D scene reconstruction
-  ``isaac_ros_h264_encoder`` improvement adding H.264 P-frame encode
   for higher performance and smaller rosbags
-  ``isaac_ros_h264_decoder`` improvement adding H.264 decompression on
   Jetson (``aarch64``)
-  ``isaac_ros_dnn_stereo_depth`` improvement of ESS DNN trained
   with real data and SDG (synthetic data generation)
-  new package ``ros2_benchmark`` for performance measurement of graphs
   of nodes in open source
-  new package ``isaac_ros_benchmark`` building upon ``ros2_benchmark``
   to provide configurations to benchmark Isaac ROS graphs of nodes
-  open source release for multiple NITROS-enabled NVIDIA-accelerated
   packages

Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds
available in the troubleshooting section:

-  ``isaac_ros_triton`` can under certain conditions report errors of
   the form ``Incomplete inference; response appeared out of order``.
-  ``isaac_ros_h264_encoder`` can become unresponsive when starting a
   stream after stopping because of a known synchronization bug.

Feature Requests & Issues Addressed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release contains new features and fixes to address user feedback,
including:

-  `isaac_ros_visual_slam #53 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_visual_slam/issues/53>`__:
   Add instructions to clone the dependency ``isaac_ros_nitros``
-  `isaac_ros_visual_slam #54 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_visual_slam/issues/54>`__:
   Update depth emitter parameters passed to RealSense node
-  `isaac_ros_nvblox #40 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_nvblox/issues/40>`__:
   Update ``realsense-ros`` branch name due to upstream change (kudos to
   `@ripdk12 <https://github.com/ripdk12>`__)
-  `isaac_ros_mission_client #2 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_mission_client/issues/2>`__:
   Change parameter name to avoid namespace duplication (kudos to
   `@bobbleballs <https://github.com/bobbleballs>`__)

Isaac ROS 0.20.0 DP (developer preview) October 19, 2022
--------------------------------------------------------

Packages available as ``DP 2 Release`` tagged ``v0.20.0-dp``.


What's New
~~~~~~~~~~

Updates including:

-  support for `Jetson Orin Nano
   8GB <https://developer.nvidia.com/blog/solving-entry-level-edge-ai-challenges-with-nvidia-jetson-orin-nano/>`__
-  `Apache-2.0 <https://www.apache.org/licenses/LICENSE-2.0>`__
   licensing for Isaac ROS repositories
-  ``isaac_ros_compression`` NVIDIA-accelerated H.264
   encoding/decoding
-  ``isaac_ros_depth_segmentation`` freespace segmentation based on
   Bi3D, added Isaac Sim tutorials, added RealSense tutorial
-  ``isaac_ros_mission_client`` VDA5050-compatible Nav2 mission
   controller, added Isaac Sim tutorial
-  ``isaac_ros_dnn_stereo_depth`` added Isaac Sim tutorial, added
   RealSense tutorial
-  ``isaac_ros_image_pipeline`` added Isaac Sim tutorial, added
   RealSense tutorial


Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds
available in the troubleshooting section:

-  ``isaac_ros_h264_encoder`` can become unresponsive when starting a
   stream after stopping because of a known synchronization bug.

Isaac ROS 0.11.0 DP (developer preview) September 1, 2022
---------------------------------------------------------

Packages available as ``DP 1.1 Release`` tagged ``v0.11.0-dp``.


What's New
~~~~~~~~~~

Updates including:

-  support for JetPack 5.0.2
-  support for Isaac Sim 2022.1.1
-  ``isaac_ros_image_pipeline`` added image flip node
-  ``isaac_ros_nvblox`` added support for 3D LIDAR input and
   serialization of maps to file, improved performance
-  ``isaac_ros_object_detection`` accelerated DetectNet inference with
   NITROS, added Isaac Sim tutorial, improved performance
-  ``isaac_ros_pose_estimation`` accelerated DOPE inference with NITROS
-  ``isaac_ros_depth_segmentation`` updated Bi3D model, added
   dynamic disparity level support
-  ``isaac_ros_visual_slam`` updated launch files for RealSense package
   changes, removed stale dependency on ``isaac_ros_image_proc``


Limitations
~~~~~~~~~~~

This release has the following known limitations, with workarounds
available in the troubleshooting section:

-  Intel RealSense drivers do not support Humble out-of-the-box
   (workaround
   :ref:`here <troubleshooting/hardware_setup:RealSense driver does not work with ROS 2 Humble>`)


Feature Requests and Issues Addressed
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~

This release contains new features and fixes to address feedback,
including:

-  `isaac_ros_nvblox #13 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_nvblox/issues/19>`__,
   `#19 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_nvblox/issues/19>`__:
   Feature request: Map serialization/deserialization from file
-  `isaac_ros_nvblox #23 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_nvblox/issues/23>`__:
   Feature request: Demo for using Intel RealSense Cameras with Nvblox
-  `isaac_ros_nvblox #24 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_nvblox/issues/24>`__:
   Feature request: Clear voxels beyond a radius
-  `isaac_ros_common #29 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_common/issues/29>`__:
   Torch unavailable inside container on AGX Orin (kudos to
   `@bblumberg <https://github.com/bblumberg>`__)
-  `isaac_ros_common #40 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_common/issues/40>`__:
   Docker support for JetPack 5.0.2
-  `isaac_ros_dnn_inference #5 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_dnn_inference/issues/5>`__:
   ROS Topics can't be viewed from outside container due to UID mismatch
   (kudos to `@GEngels <https://github.com/GEngels>`__,
   `@Doch88 <https://github.com/Doch88>`__)
-  `isaac_ros_object_detection #8 <https://github.com/NVIDIA-ISAAC-ROS/isaac_ros_object_detection/issues/8>`__:
   Isaac ROS Object Detection does not install parameters file (kudos to `@Tristis116`)

Isaac ROS 0.10.1 DP (Developer Preview) July 12, 2022
-----------------------------------------------------

Packages available as ``DP Release`` tagged ``v0.10.1-dp``.


What's New
~~~~~~~~~~

Minor bug fixes and updates including:

-  ``isaac_ros_apriltag`` updated launch file 'max_tags' parameter to
   default 64
-  ``isaac_ros_argus_camera`` tuned queue sizes
-  ``isaac_ros_common`` add missing dependency on
   ``isaac_ros_apriltag_interfaces``
-  ``isaac_ros_dnn_stereo_depth`` tuned QoS and queue sizes
-  ``isaac_ros_image_pipeline`` improved frame synchronization
-  ``isaac_ros_nvblox`` fixed integration with Nav2 costmaps on Humble,
   updated topic names for test rosbag, fixed rosdeps
-  ``isaac_ros_visual_slam`` updated launch files for RealSense package
   changes, removed stale dependency on ``isaac_ros_image_proc``

Isaac ROS 0.10.0 DP (Developer Preview) June 30, 2022
-----------------------------------------------------

Packages available as ``DP Release`` tagged ``v0.10.0-dp``.


What's New
~~~~~~~~~~

ROS 2 Humble release of Isaac ROS with performance boost and new stereo
perception functions including:

-  packages for ROS 2 Humble (Foxy deprecated) on JetPack 5.0.1 DP
-  support for Jetson Orin
-  support for Isaac Sim 2022.1 *(Isaac SIM 2021.2 is deprecated)*
-  ``isaac_ros_nitros`` implementing type adaptation and type negotiation
   features new to Humble boosting performance
-  ``isaac_ros_depth_segmentation`` for stereo vision detection of
   obstacles during navigation
-  ``isaac_ros_dnn_stereo_depth`` for stereo vision AI prediction of
   depth


Limitations
~~~~~~~~~~~

There are known limitations with this release, that
might have additional details for workarounds in the troubleshooting
section:

-  Isaac SIM 2022.1 released in June 2022 will add support for Humble in
   September. Incompatibilities exist when performing SIL (software in the
   loop) simulation with Isaac ROS.
-  RealSense drivers as-is do not support Humble, but can be modified to
   work.
-  ``isaac_ros_nvblox`` is untested with Nav2 on Humble.
-  Removed CenterPose support on Jetson.
-  ``isaac_ros_ess`` throws an error if using rosbag as input, and input
   topics are published after the node is started.

Isaac ROS 0.9.3 EA3 (Early Access) March 23, 2022
-------------------------------------------------

Packages available as ``EA3 Release`` tagged ``v0.9.3-ea3``.


What's New
~~~~~~~~~~

GTC 2022 release of Isaac ROS with new packages for vision based
autonomous navigation including:

-  packages for ROS 2 Foxy on JetPack 4.6.1
-  ``isaac_ros_visual_slam`` upgraded from SVIO as visual odometry
   source for Nav2 with save and load of feature maps
-  ``isaac_ros_nvblox`` for vision based temporary 3D obstacle map
   construction in real-time
-  ``isaac_ros_object_detection`` to detect and classify obstacles using
   DNN detection networks

Isaac ROS 0.9.1 EA2.1 (Early Access) Nov 22, 2021
-------------------------------------------------

Packages available as ``EA2 Release`` tagged ``v0.9.1-ea2``.


What's New
~~~~~~~~~~

Incremental update with fixes and new packages from previous ROSCon 2021
release, including:

-  packages for ROS 2 Foxy on JetPack 4.6
-  support for Isaac Sim 2021.3
-  ``isaac_ros_pose_estimation`` update adding CenterPose DNN for
   detection of pose
-  Isaac SIM <-> Isaac ROS tutorials with Jetson hardware in the loop
-  new software license with commercial use grant

Isaac ROS EA2 (Early Access) Oct 20, 2021
-----------------------------------------


What's New
~~~~~~~~~~

ROSCon 2021 release of Isaac ROS providing NVIDIA acceleration for
autonomous robots with new features including:

-  packages for ROS 2 Foxy on JetPack 4.6
-  ``isaac_ros_visual_odometry`` providing stereo visual inertial
   odometry
-  ``isaac_ros_argus_camera`` for NVIDIA-accelerated ISP of CSI and
   GMSL cameras
-  ``isaac_ros_image_segmentation`` for DNN based image segmentation
   including people detection pre-trained model
-  ``isaac_ros_pose_estimation`` for detection of pose using DOPE DNN
-  ``isaac_ros_dnn_inference`` for TensorRT and Triton inferencing
   server for DNN processing

Isaac ROS EA1 (Early Access) Aug 11, 2021
-----------------------------------------


What's New
~~~~~~~~~~

This is the first release of Isaac ROS providing NVIDIA acceleration for
autonomous robots with new features including:

-  packages for ROS 2 Foxy on JetPack 4.5
-  ``isaac_apriltag`` providing NVIDIA acceleration replacement for
   ``apriltag``
-  ``isaac_image_proc`` providing NVIDIA acceleration replacement for
   ``image_proc``
-  ``isaac_stereo_image_proc`` providing NVIDIA acceleration
   replacement for ``image_proc``
